Let's Encrypt e-mail address

--- a/examples/docker-compose/traefik/example-03/traefik.yml
+++ b/examples/docker-compose/traefik/example-03/traefik.yml
@@ -33,6 +33,6 @@ entryPoints:
 certificatesResolvers:
   letsencrypt:
     acme:
-      email: fakeemailaddress@fakedomain.com
+      email: myemailaddress@mydomain.com
       storage: /etc/traefik/acme.json
       tlsChallenge: {}
