--- a/examples/docker-compose/traefik/example-03/dynamic.yml
+++ b/examples/docker-compose/traefik/example-03/dynamic.yml
@@ -2,15 +2,13 @@
 http:
   routers:
     dashboard:
-      rule: Host(`dashboard.example.com`)
-      service: api@internal
       entryPoints: [websecure]
-      middlewares:
-        - auth-dashboard
+      rule: Host(`dashboard.example.com`)
+      middlewares: [auth-dashboard]
+      service: api@internal
 
   middlewares:
     auth-dashboard:
       digestAuth:
         removeHeader: true
-        users:
-          - admin:traefik:817374111f31cc282162486425ee5e9e
+        users: [admin:traefik:817374111f31cc282162486425ee5e9e]
