--- a/examples/docker-compose/haproxy/docker-compose.yml
+++ b/examples/docker-compose/haproxy/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3"
 
 services:
   haproxy:
-    image: haproxy:2.6
+    image: docker.io/library/haproxy:2.6
     restart: always
     volumes:
       - ./haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
@@ -14,11 +14,11 @@ services:
       - webserver02
 
   webserver01:
-    image: traefik/whoami:v1.8.1
+    image: docker.io/traefik/whoami:v1.8.1
     restart: always
     hostname: webserver01
 
   webserver02:
-    image: traefik/whoami:v1.8.1
+    image: docker.io/traefik/whoami:v1.8.1
     restart: always
     hostname: webserver02
