--- a/examples/docker-compose/zerotier/docker-compose-net-host.yml
+++ b/examples/docker-compose/zerotier/docker-compose-net-host.yml
@@ -3,7 +3,7 @@ version: "3"
 
 services:
   zerotier:
-    image: zerotier/zerotier:1.10.1
+    image: docker.io/zerotier/zerotier:1.10.1
     restart: always
     cap_add: [ NET_ADMIN ]
     devices: [ /dev/net/tun ]
