--- a/examples/debian-preseed/preseed.cfg
+++ b/examples/debian-preseed/preseed.cfg
@@ -40,5 +40,8 @@ d-i grub-installer/bootdev string default
 d-i finish-install/reboot_in_progress note
 d-i debian-installer/exit/poweroff boolean true
 
-d-i preseed/late_command string in-target \
-    sed -Ei 's/^#?Port .*$/Port 2222/g' /etc/ssh/sshd_config
+d-i preseed/late_command string in-target bash -c '\
+    sed -Ei "s/^#?Port .*$/Port 2222/" /etc/ssh/sshd_config && \
+    echo "mainuser ALL=(ALL) NOPASSWD: ALL" | \
+        tee /etc/sudoers.d/mainuser-nopassword && \
+    chmod 440 /etc/sudoers.d/mainuser-nopassword'
