Improved and extended preseed/late_command

--- a/examples/debian-preseed/preseed.cfg
+++ b/examples/debian-preseed/preseed.cfg
@@ -42,6 +42,9 @@ d-i debian-installer/exit/poweroff boolean true
 
 d-i preseed/late_command string in-target bash -c '\
     sed -Ei "s/^#?Port .*$/Port 2222/" /etc/ssh/sshd_config && \
-    echo "mainuser ALL=(ALL) NOPASSWD: ALL" | \
-        tee /etc/sudoers.d/mainuser-nopassword && \
-    chmod 440 /etc/sudoers.d/mainuser-nopassword'
+    install -m440 <(echo "mainuser ALL=(ALL) NOPASSWD: ALL") \
+        /etc/sudoers.d/mainuser-nopassword && \
+    install -d -omainuser -gmainuser -m700 ~mainuser/.ssh && \
+    install -omainuser -gmainuser -m600 /dev/null \
+        ~mainuser/.ssh/authorized_keys && \
+    echo "ssh-ed25519 AAAAC3Nza..." >> ~mainuser/.ssh/authorized_keys'
