--- a/.github/workflows/cicd-with-script.yml
+++ b/.github/workflows/cicd-with-script.yml
@@ -4,6 +4,9 @@ name: cicd-with-script
 on:
   workflow_call:
     inputs:
+      run-prettier: { type: boolean, required: false, default: true }
+      run-shellcheck: { type: boolean, required: false, default: true }
+      run-trivy: { type: boolean, required: false, default: true }
       path: { type: string, required: false, default: "" }
       args: { type: string, required: false, default: "" }
       env: { type: string, required: false, default: ">/dev/null" }
@@ -17,6 +20,7 @@ on:
 jobs:
   prettier:
     runs-on: ubuntu-latest
+    if: inputs.run-prettier
     steps:
       - uses: actions/checkout@v4
       - uses: dmotte/misc/actions/invoke-cicd-script@main
@@ -25,6 +29,7 @@ jobs:
 
   shellcheck:
     runs-on: ubuntu-latest
+    if: inputs.run-shellcheck
     steps:
       - uses: actions/checkout@v4
       - uses: dmotte/misc/actions/invoke-cicd-script@main
@@ -33,6 +38,7 @@ jobs:
 
   trivy:
     runs-on: ubuntu-latest
+    if: inputs.run-trivy
     steps:
       - uses: actions/checkout@v4
       - uses: dmotte/misc/actions/invoke-cicd-script@main
