--- a/examples/docker-compose/prometheus/docker-compose.yml
+++ b/examples/docker-compose/prometheus/docker-compose.yml
@@ -22,8 +22,8 @@ services:
       - /bin/sh
       - -ec
       - |
-        mkdir -p /etc/grafana/provisioning/datasources
-        cat << 'EOF' > /etc/grafana/provisioning/datasources/prometheus.yml
+        install -Dm644 /dev/stdin \
+          /etc/grafana/provisioning/datasources/prometheus.yml << 'EOF'
         ---
         apiVersion: 1
         datasources:
