--- a/examples/debian-preseed/preseed.cfg
+++ b/examples/debian-preseed/preseed.cfg
@@ -40,11 +40,11 @@ d-i grub-installer/bootdev string default
 d-i finish-install/reboot_in_progress note
 d-i debian-installer/exit/poweroff boolean true
 
-d-i preseed/late_command string in-target bash -c '\
-    sed -Ei "s/^#?Port .*$/Port 2222/" /etc/ssh/sshd_config && \
+d-i preseed/late_command string in-target bash -ec '\
+    sed -Ei "s/^#?Port .*$/Port 2222/" /etc/ssh/sshd_config; \
     install -m440 <(echo "mainuser ALL=(ALL) NOPASSWD: ALL") \
-        /etc/sudoers.d/mainuser-nopassword && \
-    install -d -omainuser -gmainuser -m700 ~mainuser/.ssh && \
+        /etc/sudoers.d/mainuser-nopassword; \
+    install -d -omainuser -gmainuser -m700 ~mainuser/.ssh; \
     install -omainuser -gmainuser -m600 /dev/null \
-        ~mainuser/.ssh/authorized_keys && \
+        ~mainuser/.ssh/authorized_keys; \
     echo "ssh-ed25519 AAAAC3Nza..." >> ~mainuser/.ssh/authorized_keys'
