Approach for local MkDocs testing

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,7 @@
 ---
-# To test locally, you can use the following command:
-#   MKDOCS_DOCS_DST=. venv/bin/python3 -mmkdocs serve -sf- < mkdocs.yml
+# To test locally, you can use the following approach:
+#   ln mkdocs.yml /some/other/dir/mkdocs.yml
+#   MKDOCS_DOCS_DST="$PWD" /tmp/venv01/bin/python3 -mmkdocs serve -sf/some/other/dir/mkdocs.yml
 
 strict: true
 docs_dir: !ENV MKDOCS_DOCS_DST
