--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,12 +7,13 @@ strict: true
 docs_dir: !ENV MKDOCS_DOCS_DST
 site_dir: !ENV MKDOCS_SITE_DIR
 
+# Inspired by https://github.com/squidfunk/mkdocs-material/blob/master/mkdocs.yml
+
 site_name: dmotte/misc
+site_url: https://dmotte.github.io/misc/
 
 repo_name: dmotte/misc
 repo_url: https://github.com/dmotte/misc
-
-# Inspired by https://github.com/squidfunk/mkdocs-material/blob/master/mkdocs.yml
 
 theme:
   name: material
@@ -35,6 +36,10 @@ theme:
       toggle:
         icon: material/toggle-switch-off
         name: Switch to system preference
+
+plugins:
+  - minify:
+      minify_html: true
 
 markdown_extensions:
   - pymdownx.emoji:
