--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     uses: dmotte/misc/.github/workflows/cicd-with-script.yml@main
     with:
       script: >
-        MKDOCS_DEPS=mkdocs-material,pymdown-extensions,mkdocs-minify-plugin
+        MKDOCS_DEPS=mkdocs-material,mkdocs-minify-plugin,mkdocs-section-index,pymdown-extensions
         MKDOCS_DOCS_SRC=. MKDOCS_DOCS_DST=mkdocs-docs
         MKDOCS_DOCS_EXCLUDES=.git,venv,mkdocs-docs,mkdocs-site
         MKDOCS_SITE_DIR=mkdocs-site
