Improved regexes for sshd_config replacements

--- a/examples/debian-preseed/preseed.cfg
+++ b/examples/debian-preseed/preseed.cfg
@@ -41,7 +41,7 @@ d-i finish-install/reboot_in_progress note
 d-i debian-installer/exit/poweroff boolean true
 
 d-i preseed/late_command string in-target bash -ec '\
-    sed -Ei "s/^#?Port .*$/Port 2222/" /etc/ssh/sshd_config; \
+    sed -Ei "s/^#?Port[ \t].*$/Port 2222/" /etc/ssh/sshd_config; \
     install -m440 <(echo "mainuser ALL=(ALL) NOPASSWD: ALL") \
         /etc/sudoers.d/mainuser-nopassword; \
     install -d -omainuser -gmainuser -m700 ~mainuser/.ssh; \
