Updated Traefik to v3.0

--- a/examples/docker-compose/traefik/example-01/docker-compose.yml
+++ b/examples/docker-compose/traefik/example-01/docker-compose.yml
@@ -3,13 +3,10 @@ version: "3"
 
 services:
   traefik:
-    image: docker.io/library/traefik:v2.4
+    image: docker.io/library/traefik:v3.0
     restart: always
-    depends_on:
-      - foo
-      - bar
-    ports:
-      - 80:80
+    depends_on: [foo, bar]
+    ports: ["80:80"]
     volumes:
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
@@ -17,11 +14,11 @@ services:
       - ./dynamic.yml:/etc/traefik/dynamic/dynamic.yml:ro
 
   foo:
-    image: docker.io/traefik/whoami:v1.8.1
+    image: docker.io/traefik/whoami:v1.10
     restart: always
     hostname: foo
 
   bar:
-    image: docker.io/traefik/whoami:v1.8.1
+    image: docker.io/traefik/whoami:v1.10
     restart: always
     hostname: bar
