--- a/examples/docker-compose/traefik/example-01/traefik.yml
+++ b/examples/docker-compose/traefik/example-01/traefik.yml
@@ -3,9 +3,8 @@
 api: {}
 
 # Enable access logging to stdout
-accessLog: {}
+accessLog: { addInternals: true }
 
 providers:
   # Use the dynamic.yml file as dynamic configuration provider
-  file:
-    directory: /etc/traefik/dynamic
+  file: { directory: /etc/traefik/dynamic }
