--- a/examples/talos-prod-vbox/patch-worker-23.yaml
+++ b/examples/talos-prod-vbox/patch-worker-23.yaml
@@ -9,5 +9,6 @@ machine:
         dhcp: false
         addresses: [192.168.10.23/24]
         routes: [{ network: 0.0.0.0/0, gateway: 192.168.10.1 }]
+        vip: { ip: 192.168.10.20 }
   time:
     servers: [time.cloudflare.com]
